<resources>
    <string name="app_name">Meet A Local</string>

    <!-- LoginActivity -->
    <string name="login_email_address">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>

    <!-- Sign up -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_surname">Surname</string>
    <string name="sign_up_home_country">Home Country</string>
    <string name="sign_up_home_town">Home Town</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_introduce">Kindly introduce yourself (optional)</string>
    <string name="sign_up_languages">Which languages do you speak?</string>
    <string name="sign_up_next_step">Next Step</string>

        <!-- Sign up as Local -->
        <string name="sign_up_as_local"><u>Sign up as a Local</u></string>
        <string name="sign_up_as_local_provide_options">Tell us what you want to provide</string>
        <string name="sign_up_as_local_finish_sign_up">Finish Sign Up</string>
        <string name="provide_option_accommodation">Accommodation</string>
        <string name="provide_option_accompany">Accompany</string>
        <string name="provide_option_guided_tours">Guided Tours</string>

    <!-- Navigation Drawer Menu -->
    <string name="navigation_drawer_menu_home">Home</string>
    <string name="navigation_drawer_menu_bucket_list">My Bucket List</string>
    <string name="navigation_drawer_menu_profile">Profile</string>
    <string name="navigation_drawer_inbox_profile">Inbox</string>
    <string name="navigation_drawer_logout">Logout</string>

    <!-- Navigation Drawer Header Placeholders -->
    <string name="navigation_drawer_header_names">First Name Surname</string>
    <string name="navigation_drawer_header_email">E-Mail Address</string>

    <!-- Empty Bucket List -->
    <string name="empty_bucket_list">Empty Bucket List</string>
    <string name="empty_bucket_list_message">Looks like your Bucket List is empty</string>

    <!-- Empty Inbox -->
    <string name="empty_inbox_message">Your inbox seems to be empty</string>

    <!-- Logout Dialog -->
    <string name="logout_dialog_question">Do you want to logout?</string>
    <string name="logout_dialog_logout">Logout</string>
    <string name="logout_dialog_stay">Stay</string>

    <!-- Country Item Placeholders -->
    <string name="country_item_country_name">Country Name</string>
    <string name="country_item_check_mark">Check Mark</string>

    <!-- Profile User -->
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_about_introduction">User Introduction</string>
    <string name="profile_about_languages">Speaks Languages</string>
    <string name="profile_edit_your_profile">Edit your profile</string>
    <string name="profile_edit_profile_picture">Edit profile picture</string>
    <string name="profile_edit_profile_personal_information">Personal information</string>
    <string name="profile_edit_about">About</string>
    <string name="profile_edit_languages">Languages</string>
    <string name="profile_edit_save">Save</string>

</resources>
