<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main_items"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_home"
            android:icon="@drawable/ic_home_grey_24dp"
            android:title="@string/navigation_drawer_menu_home"/>

        <item
            android:id="@+id/menu_item_bucket_list"
            android:icon="@drawable/ic_bucket_list_grey_24dp"
            android:title="@string/navigation_drawer_menu_bucket_list"/>

        <item
            android:id="@+id/menu_item_inbox"
            android:icon="@drawable/ic_inbox_grey_24dp"
            android:title="@string/navigation_drawer_inbox_profile"/>

        <item
            android:id="@+id/menu_item_profile"
            android:icon="@drawable/ic_person_grey_24dp"
            android:title="@string/navigation_drawer_menu_profile"/>

    </group>

    <group
        android:id="@+id/group_logout_items"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/ic_logout_grey_24dp"
            android:title="@string/navigation_drawer_logout"/>

    </group>

</menu>