<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo_round"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/text_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/app_name"
        android:fontFamily="@font/mali_regular"
        android:textSize="40sp"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_appName"
        android:layout_marginTop="15dp"
        android:hint="@string/login_email_address"
        android:textColor="@color/textColor"
        tools:ignore="Autofill"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        android:hint="@string/login_password"
        android:textColor="@color/textColor"
        tools:ignore="Autofill"
        android:inputType="textPassword"/>

    <!-- LOGIN AND SIGN UP BUTTON -->
    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button"
            android:textColor="@color/textColor"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onLogin"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:background="@drawable/button"
            android:textColor="@color/textColor"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onStartSignUp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_as_local"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onSignUpAsLocal"/>

</androidx.constraintlayout.widget.ConstraintLayout>