<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorSecondaryLight"
    android:focusableInTouchMode="true"
    tools:context=".user.activity.EditUserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_user_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/profile_edit_your_profile"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_edit_profile_picture"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/image_earth"/>

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/image_edit_profile_picture"
                android:background="@null"
                android:src="@drawable/ic_edit_grey_24dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/profile_edit_profile_picture"
                android:onClick="onEditProfilePicture"/>

            <TextView
                android:id="@+id/text_edit_profile_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image_edit_profile_picture"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_first_name" />

            <EditText
                android:id="@+id/edit_text_edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_edit_profile_first_name"
                android:textColor="@color/textColor"
                android:hint="@string/sign_up_first_name"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/text_edit_profile_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_text_edit_first_name"
                android:text="@string/sign_up_surname"/>

            <EditText
                android:id="@+id/edit_text_edit_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_edit_profile_surname"
                android:hint="@string/sign_up_surname"
                android:textColor="@color/textColor"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/text_edit_profile_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_text_edit_surname"
                android:text="@string/sign_up_home_country"/>

            <EditText
                android:id="@+id/edit_text_edit_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_edit_profile_country"
                android:textColor="@color/textColor"
                android:hint="@string/sign_up_home_country"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/text_edit_profile_home_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_text_edit_country"
                android:text="@string/sign_up_home_town" />

            <EditText
                android:id="@+id/edit_text_edit_home_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_edit_profile_home_town"
                android:textColor="@color/textColor"
                android:hint="@string/sign_up_home_town"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/text_edit_profile_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_text_edit_home_town"
                android:text="@string/profile_edit_about"/>

            <EditText
                android:id="@+id/edit_text_edit_about"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_constraintTop_toBottomOf="@id/text_edit_profile_about"
                android:textColor="@color/textColor"
                android:gravity="top"
                android:hint="@string/profile_edit_about"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"/>

            <TextView
                android:id="@+id/text_edit_profile_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_text_edit_about"
                android:text="@string/profile_edit_languages"/>

            <EditText
                android:id="@+id/edit_text_edit_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_edit_profile_languages"
                android:textColor="@color/textColor"
                android:gravity="top"
                android:hint="@string/profile_edit_languages"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>