<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/sign_up_introduce"
        android:layout_marginTop="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSecondary"
        android:layout_marginTop="2dp"/>

    <EditText
        android:id="@+id/edit_text_introduction"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/textColor"
        android:focusable="true"
        tools:ignore="Autofill,LabelFor"
        android:gravity="top|start"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/sign_up_languages"
        android:layout_marginTop="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSecondary"
        android:layout_marginTop="2dp"/>

    <EditText
        android:id="@+id/edit_text_languages"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="16sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/textColor"
        android:focusable="true"
        tools:ignore="Autofill,LabelFor"
        android:gravity="top|start"/>

    <ProgressBar
        android:id="@+id/progress_bar_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:backgroundTint="@color/colorPrimary"
        android:max="100"/>

    <Button
        android:id="@+id/button_finish_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColor"
        android:background="@drawable/button"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/sign_up_as_local_finish_sign_up"/>


</LinearLayout>